--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "convex": "^1.17.0",
     "immer": "^10.1.1",
     "immutable": "^4.3.7",
     "react": "^18.3.1",
