refs and backlinks done ???

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.36.0",
+    "@codenamize/codenamize": "^1.1.1",
     "@convex-dev/auth": "^0.0.74",
     "convex": "^1.17.0",
     "immer": "^10.1.1",
