--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "immutable": "^4.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "ts-pattern": "^5.5.0",
     "use-immer": "^0.10.0"
   },
