--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "scrape": "tsx scraping/followingScrape.ts",
+    "scrape-test": "tsx scraping/test.ts"
   },
   "dependencies": {
     "@auth/core": "^0.36.0",
     "@codenamize/codenamize": "^1.1.1",
     "@convex-dev/auth": "^0.0.74",
+    "axios": "^1.7.7",
     "convex": "^1.17.0",
     "immer": "^10.1.1",
     "immutable": "^4.3.7",
@@ -24,16 +27,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.8.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
