--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "scrape": "tsx scraping/followingScrape.ts",
-    "scrape-test": "tsx scraping/test.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@auth/core": "^0.36.0",
+    "@clerk/clerk-react": "^5.15.0",
     "@codenamize/codenamize": "^1.1.1",
     "@convex-dev/auth": "^0.0.74",
     "axios": "^1.7.7",
