--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "immer": "^10.1.1",
     "immutable": "^4.3.7",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "ts-pattern": "^5.5.0",
