--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@convex-dev/auth": "^0.0.74",
     "axios": "^1.7.7",
     "convex": "^1.17.0",
+    "convex-helpers": "^0.1.65",
     "immer": "^10.1.1",
     "immutable": "^4.3.7",
     "react": "^18.3.1",
