--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.36.0",
-    "@auth0/auth0-react": "^2.2.4",
+    "@clerk/clerk-react": "^5.15.0",
     "@codenamize/codenamize": "^1.1.1",
     "@convex-dev/auth": "^0.0.74",
     "axios": "^1.7.7",
