--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,19 @@
     "@codenamize/codenamize": "^1.1.1",
     "@convex-dev/auth": "^0.0.74",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "convex": "^1.17.0",
     "convex-helpers": "^0.1.65",
     "immer": "^10.1.1",
     "immutable": "^4.3.7",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.5.0",
     "use-immer": "^0.10.0"
   },
