--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "tsx": "^4.19.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-pwa": "^0.21.0"
   }
 }
