--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,13 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "throttled-queue": "^2.1.4",
     "ts-pattern": "^5.5.0",
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.13.11",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
