--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "convex-helpers": "^0.1.65",
     "immer": "^10.1.1",
     "immutable": "^4.3.7",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
